--- a/overlay/frameworks/base/packages/SystemUI/res/values/custom_config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/custom_config.xml
@@ -23,5 +23,10 @@
 
     <!-- Doze: does this device support STATE_DOZE and STATE_DOZE_SUSPEND?  -->
     <bool name="doze_display_state_supported">true</bool>
+    <bool name="doze_suspend_display_state_supported">true</bool>
+
+    <!-- Doze: can we assume the pickup sensor includes a proximity check?
+         This is ignored if doze_pickup_subtype_performs_proximity_check is not empty. -->
+    <bool name="doze_pickup_performs_proximity_check">true</bool>
 
 </resources>
